fix(CSS): checkbox align

--- a/src/App.css
+++ b/src/App.css
@@ -480,11 +480,8 @@
   height: 20px;
   border-radius: 4px;
   display: flex;
-  align-items: center;
   justify-content: center;
-
   cursor: default;
-  /* border: 1px solid purple; */
 }
 .CheckboxRoot:hover {
   /* background-color: var(--ev2); */
@@ -494,8 +491,6 @@
 }
 
 .CheckboxIndicator {
-  /* width: 10px;
-  height: 10px; */
   color: var(--accent1);
 }
 
@@ -526,7 +521,7 @@
 .filter-content[data-state='expanded'] {
   /* transform: translateY(0); */
   /* animation-name: slideRightAndFade; */
-  height: 240px;
+  height: 260px;
 }
 .filter-column {
   display: flex;
@@ -543,6 +538,9 @@
 }
 
 .filter-button {
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 120px;
 }
 
 .ExpIcon {
